--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">AndroidCodeTest</string>
+
+    <string name="menu_add_text">Add</string>
+    <string name="menu_search_text">Search</string>
+    <string name="menu_user_item_delete_text">Delete</string>
+
+    <string name="item_user_menu_option">⋮</string>
+    <string name="fragment_user_list_empty_text">List is empty! Try to add new users</string>
+
 </resources>
